--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -56,6 +56,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.4.0",
     "input-otp": "^1.4.1",
+    "kubo-rpc-client": "^5.0.1",
     "lucide-react": "^0.460.0",
     "next": "^14.2.11",
     "next-nprogress-bar": "^2.3.13",
