--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -61,6 +61,7 @@
     "next": "^14.2.11",
     "next-nprogress-bar": "^2.3.13",
     "next-themes": "^0.4.3",
+    "pinata-web3": "^0.5.1",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
