--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,6 +4,8 @@ nmHoistingLimits: workspaces
 
 nodeLinker: node-modules
 
+npmRegistryServer: "https://registry.npmmirror.com/"
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
