--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -55,12 +55,14 @@
     "daisyui": "4.12.10",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.4.0",
+    "humanize-duration": "^3.28.0",
     "input-otp": "^1.4.1",
     "kubo-rpc-client": "^5.0.1",
     "lucide-react": "^0.460.0",
     "next": "^14.2.11",
     "next-nprogress-bar": "^2.3.13",
     "next-themes": "^0.4.3",
+    "nprogress": "^0.2.0",
     "pinata-web3": "^0.5.1",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
@@ -69,11 +71,13 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.0",
+    "react-json-view": "1.21.3",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^8.0.4",
     "usehooks-ts": "^3.1.0",
     "vaul": "^1.1.1",
     "viem": "2.21.32",
