--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -47,6 +47,7 @@
     "@tanstack/react-query": "^5.59.15",
     "@uniswap/sdk-core": "^5.8.2",
     "@uniswap/v2-sdk": "^4.6.1",
+    "axios": "1.7.9",
     "blo": "^1.2.0",
     "burner-connector": "^0.0.8",
     "class-variance-authority": "^0.7.0",
