--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -56,7 +56,7 @@
     "daisyui": "4.12.10",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.4.0",
-    "humanize-duration": "^3.28.0",
+    "humanize-duration": "^3.32.1",
     "input-otp": "^1.4.1",
     "kubo-rpc-client": "^5.0.1",
     "lucide-react": "^0.460.0",
@@ -88,6 +88,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/humanize-duration": "^3.27.4",
     "@types/node": "^18.19.50",
     "@types/react": "^18.3.5",
     "abitype": "1.0.6",
